<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_margin="8dp"
    android:elevation="2dp"
    android:gravity="center">

    <TextView
        android:id="@+id/tvBMIValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvBMIValue"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp">
    <TextView
        android:id="@+id/tvBMICategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvBMICategory"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tvDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDateTime"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"/>
    </LinearLayout>

</LinearLayout>