<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:openDrawer="start"
    tools:context=".ResultActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/app_bar_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
    <!-- Title -->
    <TextView
        android:id="@+id/tvResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvResultTitle"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/tvResultTitle"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp" />

    <!-- BMI Display -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:background="@drawable/result_background"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/tvBMICategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvBMICategory"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/tvBMICategory"/>

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvBMIValue"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/tvBMIValue"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>


        <!-- Save Result Button -->
        <Button
            android:id="@+id/btnSaveResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSaveResult"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <!-- Advice Section -->
    <TextView
        android:id="@+id/tvAdviceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAdviceTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/tvAdviceTitle"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvAdviceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAdviceText"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <!-- Recalculate Button -->
    <Button
        android:id="@+id/btnRecalculateBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnRecalculateBMI"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_marginTop="40dp"/>


        </LinearLayout>
    </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:id="@+id/navigationView"
        app:headerLayout="@layout/header_drawer_nav"
        app:menu="@menu/drawer_nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>